[package]
name = "yttp"
version = "0.0.6"
edition = "2024"
license = "MIT"
description = "Better HTTP - a JSON/YAML façade for HTTP requests and responses"
keywords = ["http", "yaml", "json", "api", "rest"]
categories = ["web-programming::http-client"]
repository = "https://github.com/ogheorghies/yttp"

[dependencies]
base64 = "0.22"
serde_json = { version = "1", features = ["preserve_order"] }
serde_yml = "0.0.12"
url = "2"
